<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">공개대화방</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="temp_id_login">임시 아이디로 로그인</string>
    <string name="facebook_login">페이스북 로그인</string>
    <string name="title_activity_register_as_random_id">RegisterAsRandomID</string>
    <string name="welcome_msg">공개수다방에 오신걸 환영합니다.</string>
    <string name="msg_input_sex">성별을 선택해 주세요.</string>
    <string name="sex_male">남자</string>
    <string name="sex_female">여자</string>
    <string name="msg_input_birthyear">출생년도를 선택해 주세요.</string>
    <string name="msg_input_user_profile">본인이 해당되는 키워드를 모두 선택해 주세요.(3개이상)</string>
    <string name="next">다음</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="send">전송</string>
    <string name="user_profile_title">호감가나요?</string>

    <string name="menu_settings">Settings</string>
    <string name="Fragment1">This is Fragment 1</string>
    <string name="Fragment2">This is Fragment 2</string>
    <string name="Fragment3">This is Fragment 3</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
</resources>
